# storage/api-docs/api-docs.json
@@ -335,6 +335,214 @@
                     }
                 ]
             }
+        },
+        "/api/group": {
+            "get": {
+                "tags": [
+                    "Groups"
+                ],
+                "summary": "Get group information",
+                "description": "Returns group data",
+                "operationId": "getGroupData",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "Group id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Group"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Group not found"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/create-theory": {
+            "post": {
+                "tags": [
+                    "Theories"
+                ],
+                "summary": "Create new theory",
+                "description": "Returns theory data",
+                "operationId": "createTheory",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/CreateTheoryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Theory"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/theories": {
+            "get": {
+                "tags": [
+                    "Theories"
+                ],
+                "summary": "Get theories list",
+                "description": "Returns theories list",
+                "operationId": "getTheoriesData",
+                "parameters": [
+                    {
+                        "name": "group_id",
+                        "in": "query",
+                        "description": "Id of related group",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Group"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/theory": {
+            "get": {
+                "tags": [
+                    "Theories"
+                ],
+                "summary": "Get theory information",
+                "description": "Returns theory data",
+                "operationId": "getTheoryData",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "Theory id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Group"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Theory not found"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/delete-theory": {
+            "post": {
+                "tags": [
+                    "Theories"
+                ],
+                "summary": "Delete theory",
+                "description": "Returns success",
+                "operationId": "deleteTheory",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/DeleteGroupRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Theory not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -351,6 +559,43 @@
                         "description": "Name of the new group",
                         "type": "string",
                         "example": "Java"
+                    }
+                },
+                "type": "object"
+            },
+            "CreateTheoryRequest": {
+                "title": "Create theory request",
+                "description": "Create theory request body data",
+                "required": [
+                    "name",
+                    "user_id",
+                    "group_id",
+                    "document_path"
+                ],
+                "properties": {
+                    "name": {
+                        "title": "Name",
+                        "description": "Name of the new group",
+                        "type": "string",
+                        "example": "Java"
+                    },
+                    "user_id": {
+                        "title": "User id",
+                        "description": "Id of user who created this group",
+                        "type": "string",
+                        "example": "23"
+                    },
+                    "group_id": {
+                        "title": "Group ID",
+                        "description": "Id of group",
+                        "type": "integer",
+                        "example": "12"
+                    },
+                    "document_path": {
+                        "title": "Document path",
+                        "description": "Path of document on the server",
+                        "type": "string",
+                        "example": "/theory/file.docx"
                     }
                 },
                 "type": "object"
@@ -499,6 +744,65 @@
                 "type": "object",
                 "xml": {
                     "name": "Group"
+                }
+            },
+            "Theory": {
+                "title": "Theory",
+                "description": "Theory",
+                "properties": {
+                    "id": {
+                        "title": "ID",
+                        "description": "ID",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "name": {
+                        "title": "Name",
+                        "description": "Name of the new group",
+                        "type": "string",
+                        "example": "Java"
+                    },
+                    "user_id": {
+                        "title": "User id",
+                        "description": "Id of user who created this group",
+                        "type": "string",
+                        "example": "23"
+                    },
+                    "group_id": {
+                        "title": "Group ID",
+                        "description": "Id of group",
+                        "type": "integer",
+                        "example": "12"
+                    },
+                    "document_path": {
+                        "title": "Document path",
+                        "description": "Path of document on the server",
+                        "type": "string",
+                        "example": "/theory/file.docx"
+                    },
+                    "author": {
+                        "title": "Author",
+                        "description": "Author of theory",
+                        "type": "string",
+                        "example": "Roman Gurniy"
+                    },
+                    "date": {
+                        "title": "Date",
+                        "description": "Date of created the theoury",
+                        "type": "string",
+                        "example": "March 10, 2022"
+                    },
+                    "isAdmin": {
+                        "title": "IsAdmin",
+                        "description": "Returns true is user is admin of this group",
+                        "type": "string",
+                        "example": "true"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Theory"
                 }
             },
             "User": {
